test/parse/module/bad-global-too-many.txt
;;; ERROR: 1
(module (global $n i32 i32))
(;; STDERR ;;;
parse/module/bad-global-too-many.txt:2:24: syntax error, unexpected VALUE_TYPE, expecting )
(module (global $n i32 i32))
                       ^^^
;;; STDERR ;;)
